@@ -21,7 +21,7 @@ INCLUDES = @MU_COMMON_INCLUDES@
 
 sbin_PROGRAMS = comsatd
 
-comsatd_SOURCES = action.c cfg.c comsat.c comsat.h
+comsatd_SOURCES = action.c comsat.c comsat.h
 
 comsatd_LDADD = \
  ${MU_APP_LIBRARIES}\
